# tanglenomicon_rlitt_runner

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  CITATION  Justfile  flake.nix  mkdocs.yml  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-question.yml  3-enhancement.yml  4-child_documentation.yml  5-child_implementation.yml  6-child_validation.yml  7-clarity.yml  8-spelling.yml
.github/PULL_REQUEST_TEMPLATE/: default_pull_request.md
.github/workflows/: QA.yml  flake.yml  release.yml
.sops/: mongo.enc.yaml  mongo_dev.enc.yaml
docker/: Dockerfile  config.yaml  docker-compose.yaml  mongo-init.js
docker/prometheus_reporting/: Dockerfile  prometheus.yml
docs/: README.md  admonitions.css  theme.css
docs/unit-descriptions/: config.md  entrypoints.md  odm.md  producer.md  worker.md  wrapper.md
docs/use-cases/: graft_pages.md  graft_ungood_trees.md  insert_tangle_into_collection.md  load_job_queue.md  mark_stencil_complete.md  mark_stencil_configuration.md  pageinate_collection.md  process_job.md  retrieve_page.md  verify_stencil_collection_state.md
libraries/: CMakeLists.txt
libraries/wrapper/: CMakeLists.txt  py_gen_rlitt.pyx
misc/: config.yaml  special_rlitt_no_parents.json  stencils.json
runner/: __init__.py  __main__.py  config_store.py  odm.py
runner/fproducer/: __init__.py  fproducer.py  test_fproducer.py
runner/fworker/: __init__.py  fworker.py  test_fworker.py
runner/lib_wrapper/: __init__.py  lib_wrapper.py
